--- a/src/frontend/index.html
+++ b/src/frontend/index.html
@@ -3,9 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width" />
-    <title>IC Hello Starter</title>
+    <title>Shopping cart</title>
     <base href="/" />
     <link rel="icon" href="/favicon.ico" />
+    <link rel="stylesheet" href="./css/normalize.css" />
   </head>
 
   <body>
